--- a/aboutme.html
+++ b/aboutme.html
@@ -12,8 +12,7 @@
     <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
 		<!-- <link rel="stylesheet" href="https://kit.fontawesome.com/62f846aca1.css" crossorigin="anonymous"> -->
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap" rel="stylesheet">
-		<link rel="stylesheet" href="css/normalize.css">
-		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="style.css">
 	</head>
 
 	<body>
@@ -197,6 +196,6 @@
 
 		<script src="https://kit.fontawesome.com/62f846aca1.js" crossorigin="anonymous"></script>
 		<!-- <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" data-auto-a11y="true" ></script> -->
-		<script type="text/javascript" src="js/main.js"></script>
+		<script type="text/javascript" src="main.js"></script>
 	</body>
 </html>
