add linkedIn link

--- a/aboutme.html
+++ b/aboutme.html
@@ -28,7 +28,7 @@
 				<ul class="contactMe">
 					<li><a id="emailIcon" href="#"><i class="fa-solid fa-envelope"></i> AjideShedrack@gmail.com</a></li>
 					<li><a href="https://twitter.com/BarristerShabs"><i class="fa-brands fa-twitter"></i> @BarristerShabs</a></li>
-					<li><a id="https://www.linkedin.com/in/shabs-planta/" href="#"><i class="fa-brands fa-linkedin"></i> Ajide Shedrack</a></li>
+					<li><a href="https://www.linkedin.com/in/shabs-planta/" href="#"><i class="fa-brands fa-linkedin"></i> Ajide Shedrack</a></li>
 					<li><a id="githubIcon" href="https://github.com/ShabsCreativeContent"><i class="fa-brands fa-github"></i> ShabsCreativeContent</a></li>
 				</ul>
 
