--- a/aboutme.html
+++ b/aboutme.html
@@ -57,7 +57,7 @@
 						<div id="me" class="hidden">
 							<p>I Love answers!</p>
 							<p>I am always thinking about code and this passion often leads me to solve my coding problem, while i'm jogging, playing football, watching documentaries, or cooking jollof-rice for lunch. I'll figure out the answer then rush to my computer to see it work.</p>
-							<p>My name is Ajide Shedrack. I'm a passionate child, I'm from Kwara state and i live almmost all my life in Lagos, passionate about creating community within the tech space, And a passionate software engineer who will do whatever it takes to find an answer.</p>
+							<p>My name is Ajide Shedrack. I'm a passionate child, I'm from Kwara state and i live almost all my life in Lagos, passionate about creating community within the tech space, And a passionate software engineer who will do whatever it takes to find an answer.</p>
 							<p>Get in touch to find the next answer together!</p>
 						</div>
 						<button class="click" type="button" name="button">MEET ME</button>
@@ -89,7 +89,7 @@
 							<i class="fa-solid fa-rocket"></i>
 							<div class="">
 								<h4>UI/UX Design</h4>
-								<p>Human-centered approach to all design decisions so that products feel custom built for the target audience and is esay-to-navigate</p>
+								<p>Human-centered approach to all design decisions so that products feel custom built for the target audience and is easy-to-navigate</p>
 							</div>
 						</section>
 						<section>
