--- a/aboutme.html
+++ b/aboutme.html
@@ -11,7 +11,8 @@
 		<!-- <link rel="preconnect" href="https://fonts.googleapis.com"> -->
     <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
 		<!-- <link rel="stylesheet" href="https://kit.fontawesome.com/62f846aca1.css" crossorigin="anonymous"> -->
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap" rel="stylesheet">
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 		<link rel="stylesheet" href="style.css">
 	</head>
 
@@ -67,8 +68,9 @@
 						<div id="profPic1" class="profPic"></div>
 					</section>
 				</section>
+				
 
-	      <section class="service service1">
+	         <section class="service service1">
 					<h2>Services</h2>
 					<section class="prof2">
 						<section>
@@ -100,92 +102,58 @@
 							</div>
 						</section>
 					</section>
-	      </section>
+	         </section>
 
 				<section>
 					<h2>Latest Projects</h2>
 					<section class="Projects">
-						<section class="pBorder">
-							<div class="img"></div>
-							<h2>Travelara</h2>
-							<p> <strong>javascript, Bootstrap, sass, Node.js & Express.js</strong> - Dramatically incubate 24/7 potentialities whereas empowered experiences. Collaboratively foster high-payoff total linkage rather than corporate.</p>
-							<p><strong>Demo account:</strong> demo@demo.com</p>
-							<p><strong>Demo Password:</strong> demo</p>
-
-							<button type="button" name="button">Visit</button>
-						</section>
-						<section class="pBorder1">
-							<div class="img"></div>
-							<h2>Travelara</h2>
-							<p> <strong>javascript, Bootstrap, sass, Node.js & Express.js</strong> - Dramatically incubate 24/7 potentialities whereas empowered experiences. Collaboratively foster high-payoff total linkage rather than corporate.</p>
-							<p><strong>Demo account:</strong> demo@demo.com</p>
-							<p><strong>Demo Password:</strong> demo</p>
-
-							<button type="button" name="button">Visit</button>
-						</section>
-						<section class="pBorder2">
-							<div class="img"></div>
-							<h2>Travelara</h2>
-							<p> <strong>javascript, Bootstrap, sass, Node.js & Express.js</strong> - Dramatically incubate 24/7 potentialities whereas empowered experiences. Collaboratively foster high-payoff total linkage rather than corporate.</p>
-							<p><strong>Demo account:</strong> demo@demo.com</p>
-							<p><strong>Demo Password:</strong> demo</p>
-
-							<button type="button" name="button">Visit</button>
-						</section>
-						<section class="pBorder3">
-							<div class="img"></div>
-							<h2>Travelara</h2>
-							<p> <strong>javascript, Bootstrap, sass, Node.js & Express.js</strong> - Dramatically incubate 24/7 potentialities whereas empowered experiences. Collaboratively foster high-payoff total linkage rather than corporate.</p>
-							<p><strong>Demo account:</strong> demo@demo.com</p>
-							<p><strong>Demo Password:</strong> demo</p>
-
-							<button type="button" name="button">Visit</button>
-						</section>
+						<div class="row row-cols-1 row-cols-md-2  row-cols-xl-3 g-4 my-5">
+							<div class="col">
+							  <div class="card h-100 p-5">
+								 <img src="img/bookmark.PNG" class="card-img-top" alt="...">
+								 <div class="card-body">
+									<h2 class="card-title">Bookmark Landing Page</h2>
+									<p class="card-text"> <strong>Javascript, Bootstrap, Flexbox, HTML5, CSS3, </strong> - Web application that can help you find browers with good engine for server.</p>
+									<button><a href="https://shabscreativecontent.github.io/bookmark-landing-page/index.html" target="_blank" >Visit</a></button>
+								 </div>
+							  </div>
+							</div>
+							<!-- <div class="col">
+							  <div class="card h-100">
+								 <img src="..." class="card-img-top" alt="...">
+								 <div class="card-body">
+									<h5 class="card-title">Card title</h5>
+									<p class="card-text">This is a short card.</p>
+								 </div>
+							  </div>
+							</div>
+							<div class="col">
+							  <div class="card h-100">
+								 <img src="..." class="card-img-top" alt="...">
+								 <div class="card-body">
+									<h5 class="card-title">Card title</h5>
+									<p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+								 </div>
+							  </div>
+							</div>
+							<div class="col">
+							  <div class="card h-100">
+								 <img src="..." class="card-img-top" alt="...">
+								 <div class="card-body">
+									<h5 class="card-title">Card title</h5>
+									<p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+								 </div>
+							  </div>
+							</div>  -->
+						 </div>
 						<!-- <section class="pBorder">
 							<div class="img"></div>
 							<h2>Travelara</h2>
 							<p> <strong>javascript, Bootstrap, sass, Node.js & Express.js</strong> - Dramatically incubate 24/7 potentialities whereas empowered experiences. Collaboratively foster high-payoff total linkage rather than corporate.</p>
-							<p><strong>Demo account:</strong> demo@demo.com</p>
-							<p><strong>Demo Password:</strong> demo</p>
-
-							<button type="button" name="button">Visit</button>
-						</section>
-						<section class="pBorder">
-							<div class="img"></div>
-							<h2>Travelara</h2>
-							<p> <strong>javascript, Bootstrap, sass, Node.js & Express.js</strong> - Dramatically incubate 24/7 potentialities whereas empowered experiences. Collaboratively foster high-payoff total linkage rather than corporate.</p>
-							<p><strong>Demo account:</strong> demo@demo.com</p>
-							<p><strong>Demo Password:</strong> demo</p>
-
-							<button type="button" name="button">Visit</button>
-						</section>
-						<section class="pBorder">
-							<div class="img"></div>
-							<h2>Travelara</h2>
-							<p> <strong>javascript, Bootstrap, sass, Node.js & Express.js</strong> - Dramatically incubate 24/7 potentialities whereas empowered experiences. Collaboratively foster high-payoff total linkage rather than corporate.</p>
-							<p><strong>Demo account:</strong> demo@demo.com</p>
-							<p><strong>Demo Password:</strong> demo</p>
-
-							<button type="button" name="button">Visit</button>
-						</section>
-						<section class="pBorder">
-							<div class="img"></div>
-							<h2>Travelara</h2>
-							<p> <strong>javascript, Bootstrap, sass, Node.js & Express.js</strong> - Dramatically incubate 24/7 potentialities whereas empowered experiences. Collaboratively foster high-payoff total linkage rather than corporate.</p>
-							<p><strong>Demo account:</strong> demo@demo.com</p>
-							<p><strong>Demo Password:</strong> demo</p>
-
-							<button type="button" name="button">Visit</button>
-						</section>
-						<section class="pBorder">
-							<div class="img"></div>
-							<h2>Travelara</h2>
-							<p> <strong>javascript, Bootstrap, sass, Node.js & Express.js</strong> - Dramatically incubate 24/7 potentialities whereas empowered experiences. Collaboratively foster high-payoff total linkage rather than corporate.</p>
-							<p><strong>Demo account:</strong> demo@demo.com</p>
-							<p><strong>Demo Password:</strong> demo</p>
 
 							<button type="button" name="button">Visit</button>
 						</section> -->
+						
 					</section>
 				</section>
 			</main>
@@ -194,7 +162,9 @@
 
 
 		<script src="https://kit.fontawesome.com/62f846aca1.js" crossorigin="anonymous"></script>
-		<!-- <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" data-auto-a11y="true" ></script> -->
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+		<!--
+		<script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" data-auto-a11y="true" ></script> -->
 		<script type="text/javascript" src="main.js"></script>
 	</body>
 </html>
