--- a/aboutme.html
+++ b/aboutme.html
@@ -109,51 +109,46 @@
 					<section class="Projects">
 						<div class="row row-cols-1 row-cols-md-2  row-cols-xl-3 g-4 my-5">
 							<div class="col">
-							  <div class="card h-100 p-5">
-								 <img src="img/bookmark.PNG" class="card-img-top" alt="...">
-								 <div class="card-body">
-									<h2 class="card-title">Bookmark Landing Page</h2>
-									<p class="card-text"> <strong>Javascript, Bootstrap, Flexbox, HTML5, CSS3, </strong> - Web application that can help you find browers with good engine for server.</p>
-									<button><a href="https://shabscreativecontent.github.io/bookmark-landing-page/index.html" target="_blank" >Visit</a></button>
-								 </div>
-							  </div>
-							</div>
-							<!-- <div class="col">
-							  <div class="card h-100">
-								 <img src="..." class="card-img-top" alt="...">
-								 <div class="card-body">
-									<h5 class="card-title">Card title</h5>
-									<p class="card-text">This is a short card.</p>
-								 </div>
-							  </div>
+							   <div class="card h-100 p-5">
+								   <img src="img/hotdog-not-hotdog.PNG" class="card-img-top" alt="...">
+								   <div class="card-body">
+									<h2 class="card-title">Hotdog Not Hotdog</h2>
+									<p class="card-text"> <strong>Javascript, Node.js, Express.js, Bootstrap, Flexbox, EJS, CSS3, </strong> - Web application where you can post a picture to check if Hotdog is in it or not.</p>
+									<button><a href="https://github.com/shabscreativecontent/hotdog-not-hotdog" target="_blank" >Visit</a></button>
+								   </div>
+							   </div>
 							</div>
 							<div class="col">
-							  <div class="card h-100">
-								 <img src="..." class="card-img-top" alt="...">
-								 <div class="card-body">
-									<h5 class="card-title">Card title</h5>
-									<p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-								 </div>
-							  </div>
+								<div class="card h-100 p-5">
+								  <img src="img/bookmark.PNG" class="card-img-top" alt="...">
+								  <div class="card-body">
+									 <h2 class="card-title">Bookmark Landing Page</h2>
+									 <p class="card-text"> <strong>Javascript, Bootstrap, Flexbox, HTML5, CSS3, </strong> - Web application that can help you find browers with good engine for server.</p>
+									 <button><a href="https://shabscreativecontent.github.io/bookmark-landing-page/index.html" target="_blank" >Visit</a></button>
+								  </div>
+								</div>
 							</div>
 							<div class="col">
-							  <div class="card h-100">
-								 <img src="..." class="card-img-top" alt="...">
-								 <div class="card-body">
-									<h5 class="card-title">Card title</h5>
-									<p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-								 </div>
-							  </div>
-							</div>  -->
+							   <div class="card h-100 p-5">
+								   <img src="img/cofe.PNG" class="card-img-top" alt="...">
+								   <div class="card-body">
+									<h2 class="card-title">Camper Cafe</h2>
+									<p class="card-text"> <strong>HTML5, CSS3, </strong> - Web application that give information to the user.</p>
+									<button><a href="https://shabscreativecontent.github.io/cofe-menu/index.html" target="_blank" >Visit</a></button>
+								   </div>
+							   </div>
+							</div>
+							<div class="col">
+							   <div class="card h-100 p-5">
+								   <img src="img/registration-from.PNG" class="card-img-top" alt="...">
+								   <div class="card-body">
+									<h2 class="card-title">Registration-form</h2>
+									<p class="card-text"> <strong>HTML5, CSS3, </strong> - Web application that gets information for the user.</p>
+									<button><a href="https://shabscreativecontent.github.io/registration-form.html" target="_blank" >Visit</a></button>
+								   </div>
+							   </div>
+							</div>
 						 </div>
-						<!-- <section class="pBorder">
-							<div class="img"></div>
-							<h2>Travelara</h2>
-							<p> <strong>javascript, Bootstrap, sass, Node.js & Express.js</strong> - Dramatically incubate 24/7 potentialities whereas empowered experiences. Collaboratively foster high-payoff total linkage rather than corporate.</p>
-
-							<button type="button" name="button">Visit</button>
-						</section> -->
-						
 					</section>
 				</section>
 			</main>
