--- a/aboutme.html
+++ b/aboutme.html
@@ -29,7 +29,7 @@
 				<ul class="contactMe">
 					<li><a id="emailIcon" href="#"><i class="fa-solid fa-envelope"></i> AjideShedrack@gmail.com</a></li>
 					<li><a href="https://twitter.com/shabscc?s=11&t=AMWJpREjnd1Jb5-1Y1Bt3Q"><i class="fa-brands fa-twitter"></i> @BarristerShabs</a></li>
-					<li><a href="https://www.linkedin.com/in/shabs-planta/" href="#"><i class="fa-brands fa-linkedin"></i> Ajide Shedrack</a></li>
+					<li><a href="https://www.linkedin.com/in/ajide-shedrack-dev" href="#"><i class="fa-brands fa-linkedin"></i> Ajide Shedrack</a></li>
 					<li><a id="githubIcon" href="https://github.com/ShabsCreativeContent"><i class="fa-brands fa-github"></i> ShabsCreativeContent</a></li>
 				</ul>
 
@@ -47,7 +47,7 @@
 						<li><a href="#profPic1"><i class="fa-solid fa-user"></i></a></li>
 						<li><a href="#emailIcon"><i class="fa-solid fa-envelope"></i></a></li>
 						<li><a href="https://twitter.com/shabscc?s=11&t=AMWJpREjnd1Jb5-1Y1Bt3Q"><i class="fa-brands fa-twitter"></i></a></li>
-						<li><a href="https://www.linkedin.com/in/shabs-planta/"><i class="fa-brands fa-linkedin"></i></a></li>
+						<li><a href="https://www.linkedin.com/in/ajide-shedrack-dev"><i class="fa-brands fa-linkedin"></i></a></li>
 						<li><a href="https://github.com/ShabsCreativeContent"><i class="fa-brands fa-github"></i></a></li>
 					</ul>
 				</section>
