--- a/aboutme.html
+++ b/aboutme.html
@@ -120,6 +120,26 @@
 							</div>
 							<div class="col">
 								<div class="card h-100 p-5">
+								  <img src="img/joke-generator.PNG" class="card-img-top" alt="...">
+								  <div class="card-body">
+									 <h2 class="card-title">Joke Generator</h2>
+									 <p class="card-text"> <strong>Javascript, HTML5, CSS3, </strong> - Web application that can help you get a random joke from Chuck Norris.</p>
+									 <button><a href="https://shabscreativecontent.github.io/joke-generator/index.html" target="_blank" >Visit</a></button>
+								  </div>
+								</div>
+							</div>
+							<div class="col">
+								<div class="card h-100 p-5">
+								  <img src="img/shoppingList.PNG" class="card-img-top" alt="...">
+								  <div class="card-body">
+									 <h2 class="card-title">Shopping List App</h2>
+									 <p class="card-text"> <strong>Javascript, Flexbox, HTML5, CSS3, </strong> - Web application that can help you keep note of your Shopping List.</p>
+									 <button><a href="https://shabscreativecontent.github.io/shopping-list/index.html" target="_blank" >Visit</a></button>
+								  </div>
+								</div>
+							</div>
+							<div class="col">
+								<div class="card h-100 p-5">
 								  <img src="img/bookmark.PNG" class="card-img-top" alt="...">
 								  <div class="card-body">
 									 <h2 class="card-title">Bookmark Landing Page</h2>
