--- a/aboutme.html
+++ b/aboutme.html
@@ -119,6 +119,16 @@
 							   </div>
 							</div>
 							<div class="col">
+							   <div class="card h-100 p-5">
+								   <img src="img/solo-project-react.PNG" class="card-img-top" alt="...">
+								   <div class="card-body">
+									<h2 class="card-title">Solo Portfolio React Project</h2>
+									<p class="card-text"> <strong>React.js, JSX, HTML5, CSS3, </strong> - Web application where you can see or get to know about the ShabsCreativeContent as a Software Engineer.</p>
+									<button><a href="https://github.com/shabscreativecontent/solo-portfolio-with-react" target="_blank" >Visit</a></button>
+								   </div>
+							   </div>
+							</div>
+							<div class="col">
 								<div class="card h-100 p-5">
 								  <img src="img/joke-generator.PNG" class="card-img-top" alt="...">
 								  <div class="card-body">
