--- a/aboutme.html
+++ b/aboutme.html
@@ -110,11 +110,31 @@
 						<div class="row row-cols-1 row-cols-md-2  row-cols-xl-3 g-4 my-5">
 							<div class="col">
 							   <div class="card h-100 p-5">
+								   <img src="img/note.PNG" class="card-img-top" alt="...">
+								   <div class="card-body">
+									<h2 class="card-title">React Note App</h2>
+									<p class="card-text"> <strong>React.js, Javascript, Node.js, Flexbox, CSS3, </strong> - Web application that accept Note data from the user Interface, and save it on Firebase Database, and get it back to the user interface.</p>
+									<button><a href="https://github.com/shabscreativecontent/note-app-with-react" target="_blank" >Visit</a></button>
+								   </div>
+							   </div>
+							</div>
+							<div class="col">
+							   <div class="card h-100 p-5">
 								   <img src="img/hotdog-not-hotdog.PNG" class="card-img-top" alt="...">
 								   <div class="card-body">
 									<h2 class="card-title">Hotdog Not Hotdog</h2>
 									<p class="card-text"> <strong>Javascript, Node.js, Express.js, Bootstrap, Flexbox, EJS, CSS3, </strong> - Web application where you can post a picture to check if Hotdog is in it or not.</p>
 									<button><a href="https://github.com/shabscreativecontent/hotdog-not-hotdog" target="_blank" >Visit</a></button>
+								   </div>
+							   </div>
+							</div>
+							<div class="col">
+							   <div class="card h-100 p-5">
+								   <img src="img/memes.PNG" class="card-img-top" alt="...">
+								   <div class="card-body">
+									<h2 class="card-title">Memo Generator</h2>
+									<p class="card-text"> <strong>React.js, Node.js, Bootstrap, Flexbox, CSS3, </strong> - Web application where you can get a random picture to create a Memes Image.</p>
+									<button><a href="https://github.com/shabscreativecontent/memesgenerator" target="_blank" >Visit</a></button>
 								   </div>
 							   </div>
 							</div>
